# so2

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/diagrams/src/: MPKWorld.pu
src/: RenderArea.cpp  RenderArea.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/Drawers/: DrawerInterface.hpp  RelationDrawer.cpp  RelationDrawer.hpp  StopDrawer.cpp  StopDrawer.hpp  VehicleDrawer.cpp  VehicleDrawer.hpp
src/Geometry/: Vector2i.cpp  Vector2i.hpp
src/MPK/: MPKWorld.cpp  MPKWorld.hpp  Passenger.cpp  Passenger.hpp  Relation.cpp  Relation.hpp  Stop.cpp  Stop.hpp  Vehicle.cpp  Vehicle.hpp
src/Simulation/: MpkSimulator.cpp  MpkSimulator.h  MpkSimulator.hpp  StopSimulator.cpp  StopSimulator.hpp  Thread.cpp  Thread.h  Thread.hpp  VehicleSimulator.cpp  VehicleSimulator.h  VehicleSimulator.hpp
src/Utils/: RandUtils.cpp  RandUtils.hpp
